# TostEngine-juce-pocket-sampler

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_and_run.ps1  build_project.bat  resource.h  resource.rc
src/: Main.cpp  SamplerEditor.cpp  SamplerEditor.h  SamplerPlugin.cpp  SamplerPlugin.h  juce.h
